--- a/product.html
+++ b/product.html
@@ -19,7 +19,7 @@
                     </div>
                     <div class="header_icon1"><img src="/img/icon/Meubel House_Logos-05.png" alt=""></div>
                     <div class="header_li">
-                        <li><a href="/Furniture.html">Home</a></li>
+                        <li><a href="/index.html">Home</a></li>
                         <li><a href="/shop.html">Shop</a></li>
                         <li> <a href="">About</a></li>
                         <li> <a href="">Contact</a></li>
